complete heap and priority queue ordered