@@ -1,30 +1,26 @@
-package arrays.arraylist;
+package collections.arraylist;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-
 public class BaseArrayList {
 
-    // 数组和list列表之间的相互转换
-    // Arrays.asList(array) <-> list.toArray()
-    private void testConvertArrayAndList() {
-        // TODO. List.of()构建的列表是不可变的List
+    public static void main(String[] args) {
+        // TODO. List.of()构建列表不可再被修改
         List<Integer> needs = List.of(2,3);
 
-        // TODO. 创建初始化定长的List列表
+        // TODO. List列表创建时直接初始化数据
         Integer[] nums = {1, 2, 3};
         List<Integer> list = new ArrayList<>(Arrays.asList(nums));
         List<Integer> result = new ArrayList<>(Collections.nCopies(10, 0));
 
-        List<String> myList = new ArrayList<>();
-        String[] myArray = new String[myList.size()];
-        // 返回的数组中只会包含list中有的数据
-        myArray = myList.toArray(myArray);
-        // .toArray() 必须提供强制类型转换
-        myArray = (String[]) myList.toArray();
+        List<Integer> intList = new ArrayList<>();
+        intList.add(1);
+        intList.add(3);
+        intList.add(1, 2); // 导致index=1往后的值都会移动，以完成列表长度的自动扩充 !!
+        intList.remove(1); // 后面位置的值自全部向前一位填充
     }
 
     // TODO. List列表可以指定index位置进行插入，并且通过位置进行查询数据
@@ -35,8 +31,8 @@ public class BaseArrayList {
         List<Integer> list3 = new ArrayList<>(list0);
 
         list1.add(-1);
-        list1.add(1, 6); // TODO. 在指定位置插入元素
-        list1.add(1, 2); // 导致index=1往后的值都会移动，以完成列表长度的自动扩充，造成时间复杂度
+        list1.add(1, 6); // 在指定位置插入元素
+        list1.add(1, 2); // 导致index=1往后的值都会移动，自动扩容，造成时间复杂度
         list1.remove(1);         // 后面位置的值自全部向前一位填充
         list1.remove(list1.size() - 1); // 删除最后一个元素
         list3.set(0, -1);
@@ -62,20 +58,5 @@ public class BaseArrayList {
         ArrayList<String> copyList1 = new ArrayList<>(myList);
         ArrayList<String> copyList2 = new ArrayList<>();
         copyList2.addAll(myList);
-    }
-
-    private void convertListToArray(List<String> myList) {
-        String[] myArray = new String[myList.size()];
-        myArray = myList.toArray(myArray); // 将要转换成的数组作为参数传递 !!!
-
-        String[] myArray02 = (String[]) myList.toArray(); // Object[] -> String[]
-    }
-
-    public void testInsertItemToArrayList() {
-        List<Integer> intList = new ArrayList<>();
-        intList.add(1);
-        intList.add(3);
-        intList.add(1, 2); // 导致index=1往后的值都会移动，以完成列表长度的自动扩充 !!
-        intList.remove(1); // 后面位置的值自全部向前一位填充
     }
 }
